--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,121 +1,145 @@
-<div class='container'>
-    <div class='large'>
-        <img
-            src='https://images.pexels.com/photos/595747/pexels-photo-595747.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='medium'>
-        <img
-            src='https://images.pexels.com/photos/305255/pexels-photo-305255.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='small'>
-        <img
-            src='https://images.pexels.com/photos/1029039/pexels-photo-1029039.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='large'>
-        <img
-            src='https://images.pexels.com/photos/983436/pexels-photo-983436.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='small'>
-        <img
-            src='https://images.pexels.com/photos/1028437/pexels-photo-1028437.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='large'>
-        <img
-            src='https://images.pexels.com/photos/963436/pexels-photo-963436.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='small'>
-        <img
-            src='https://images.pexels.com/photos/1028599/pexels-photo-1028599.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='medium'>
-        <img
-            src='https://images.pexels.com/photos/814372/pexels-photo-814372.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=660'>
-    </div>
-    <div class='small'>
-        <img
-            src='https://images.pexels.com/photos/1018797/pexels-photo-1018797.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='medium'>
-        <img
-            src='https://images.pexels.com/photos/830912/pexels-photo-830912.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='large'>
-        <img
-            src='https://images.pexels.com/photos/890500/pexels-photo-890500.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='small'>
-        <img
-            src='https://images.pexels.com/photos/863985/pexels-photo-863985.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='medium'>
-        <img
-            src='https://images.pexels.com/photos/398549/pexels-photo-398549.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=960'>
-    </div>
-    <div class='small'>
-        <img
-            src='https://images.pexels.com/photos/1024252/pexels-photo-1024252.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='large'>
-        <img
-            src='https://images.pexels.com/photos/91216/pexels-photo-91216.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='small'>
-        <img
-            src='https://images.pexels.com/photos/1018350/pexels-photo-1018350.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='large'>
-        <img
-            src='https://images.pexels.com/photos/881462/pexels-photo-881462.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='medium'>
-        <img
-            src='https://images.pexels.com/photos/380285/pexels-photo-380285.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
-    <div class='medium'>
-        <img
-            src='https://images.pexels.com/photos/837500/pexels-photo-837500.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260'>
-    </div>
+---
+import Artwork from "./Artwork.astro";
+import AccademiaToo from "../images/Accademia too.jpg";
+import Accademia from "../images/Accademia.jpg";
+import Anyway from "../images/Anyway.jpg";
+import Canal from "../images/Canal.jpg";
+import Carnival from "../images/Carnival.jpg";
+import Casanova from "../images/Casanova.jpg";
+import CoffeeBreak from "../images/Coffee Break.jpg";
+import Contact from "../images/Contact.jpg";
+import Earth from "../images/Earth.jpg";
+import Gold from "../images/Gold.jpg";
+import Holiday from "../images/Holiday.jpg";
+import JazzWorld from "../images/Jazz world.jpg";
+import Jazzman from "../images/Jazzman.jpg";
+import MM from "../images/M.M.jpg";
+import NewContact from "../images/New conctact.jpg";
+import Oceans from "../images/Oceans.jpg";
+import PiazzaN1 from "../images/Piazza n.1.jpg";
+import PlanetEarth from "../images/Planet Earth.jpg";
+import Rockstar from "../images/Rockstar.jpg";
+import South from "../images/South.jpg";
+import Temple from "../images/Temple.jpg";
+import Through from "../images/Through.jpg";
+import Time from "../images/Time.jpg";
+import ToTheMusicCity from "../images/To the music city.jpg";
+import Why_ from "../images/Why_.jpg";
+---
+
+<div class="container">
+  <div class="small">
+    <img src={South} />
+  </div>
+  <div class="small">
+    <img src={Temple} />
+  </div>
+  <div class="small">
+    <img src={Through} />
+  </div>
+  <div class="small">
+    <img src={Time} />
+  </div>
+  <div class="small">
+    <img src={ToTheMusicCity} />
+  </div>
+  <div class="small">
+    <img src={Why_} />
+  </div>
+  <div class="small">
+    <img src={Rockstar} />
+  </div>
+  <div class="medium">
+    <img src={PlanetEarth} />
+  </div>
+  <div class="small">
+    <img src={PiazzaN1} />
+  </div>
+  <div class="large">
+    <img src={Oceans} />
+  </div>
+  <div class="small">
+    <img src={NewContact} />
+  </div>
+  <div class="small">
+    <img src={MM} />
+  </div>
+  <div class="small">
+    <img src={Jazzman} />
+  </div>
+  <div class="medium">
+    <img src={JazzWorld} />
+  </div>
+  <div class="small">
+    <img src={Holiday} />
+  </div>
+  <div class="medium">
+    <img src={Gold} />
+  </div>
+  <div class="large">
+    <img src={Earth} />
+  </div>
+  <div class="medium">
+    <img src={Contact} />
+  </div>
+  <div class="small">
+    <img src={CoffeeBreak} />
+  </div>
+  <div class="large">
+    <img src={Casanova} />
+  </div>
+  <div class="small">
+    <img src={Carnival} />
+  </div>
+  <div class="large">
+    <img src={Canal} />
+  </div>
+  <div class="large">
+    <img src={Anyway} />
+  </div>
+  <div class="small">
+    <img src={Accademia} />
+  </div>
+  <div class="small">
+    <img src={AccademiaToo} />
+  </div>
 </div>
 <style>
-    body {
-        margin: 0;
-    }
+  .container {
+    width: 80vw;
+    margin: 3em auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 50px;
+    grid-auto-flow: dense;
+    grid-gap: 5px;
+  }
 
-    .container {
-        width: 80vw;
-        margin: 3em auto;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        grid-auto-rows: 50px;
-        grid-auto-flow: dense;
-        grid-gap: 5px;
-    }
+  .large,
+  .medium,
+  .small {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    grid-column: auto / span 1;
+  }
 
-    .large,
-    .medium,
-    .small {
-        display: flex;
-        height: 100%;
-        width: 100%;
-        grid-column: auto / span 1;
-    }
+  .large {
+    grid-row: span 4;
+  }
 
-    .large {
-        grid-row: span 4;
-    }
+  .medium {
+    grid-row: span 3;
+  }
 
-    .medium {
-        grid-row: span 3;
-    }
+  .small {
+    grid-row: span 2;
+  }
 
-    .small {
-        grid-row: span 2;
-    }
-
-    .container img {
-        width: 100%;
-        height: auto;
-        -o-object-fit: cover;
-        object-fit: cover;
-    }
+  .container img {
+    width: 100%;
+    height: auto;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
 </style>
