added some images

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,191 +1,31 @@
 ---
 import { Picture } from "astro-imagetools/components";
-// import Artwork from "./Artwork.astro";
-// import AccademiaToo from "../images/Accademia too.jpg";
-// import Accademia from "../images/Accademia.jpg";
-// import Anyway from "../images/Anyway.jpg";
-// import Canal from "../images/Canal.jpg";
-// import Carnival from "../images/Carnival.jpg";
-// import Casanova from "../images/Casanova.jpg";
-// import CoffeeBreak from "../images/Coffee Break.jpg";
-// import Contact from "../images/Contact.jpg";
-// import Earth from "../images/Earth.jpg";
-// import Gold from "../images/Gold.jpg";
-// import Holiday from "../images/Holiday.jpg";
-// import JazzWorld from "../images/Jazz world.jpg";
-// import Jazzman from "../images/Jazzman.jpg";
-// import MM from "../images/M.M.jpg";
-// import NewContact from "../images/New conctact.jpg";
-// import Oceans from "../images/Oceans.jpg";
-// import PiazzaN1 from "../images/Piazza n.1.jpg";
-// import PlanetEarth from "../images/Planet Earth.jpg";
-// import Rockstar from "../images/Rockstar.jpg";
-// import ToTheMusicCity from "../images/To the music city.jpg";
-// import Why_ from "../images/Why_.jpg";
-// import Time from "../images/Time.jpg";
-// import Through from "../images/Through.jpg";
-// import Temple from "../images/Temple.jpg";
-// import South from "../images/South.jpg";
 ---
 
 <div class="row">
   <div class="column">
-    <Picture
-      src="/src/images/South.jpg"
-      alt="artwork called South"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Temple.jpg"
-      alt="artwork called Temple"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Through.jpg"
-      alt="artwork called Through"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Time.jpg"
-      alt="artwork called Time"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/ToTheMusicCity.jpg"
-      alt="artwork called ToTheMusicCity"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Why.jpg"
-      alt="artwork called Why"
-      width={1024}
-      flatten={true}
-    />
+    <Picture src="/src/images/firstgallery/1PlanetEarth.png" alt="artwork called Planet Earth" flatten={true}
+      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
   </div>
   <div class="column">
-    <Picture
-      src="/src/images/Jazzman.jpg"
-      alt="artwork called Jazzman"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/JazzWorld.jpg"
-      alt="artwork called JazzWorld"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Holiday.jpg"
-      alt="artwork called Holiday"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Gold.jpg"
-      alt="artwork called Gold"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Earth.jpg"
-      alt="artwork called Earth"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Contact.jpg"
-      alt="artwork called Contact"
-      width={1024}
-      flatten={true}
-    />
+    <Picture src="/src/images/firstgallery/2Tothemusiccity.png" alt="artwork called To the music city" width={1024}
+      flatten={true} preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
   </div>
   <div class="column">
-    <Picture
-      src="/src/images/CoffeeBreak.jpg"
-      alt="artwork called CoffeeBreak"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Casanova.jpg"
-      alt="artwork called Casanova"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Carnival.jpg"
-      alt="artwork called Carnival"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Canal.jpg"
-      alt="artwork called Canal"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Anyway.jpg"
-      alt="artwork called Anyway"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Accademia.jpg"
-      alt="artwork called Accademia"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/AccademiaToo.jpg"
-      alt="artwork called AccademiaToo"
-      width={1024}
-      flatten={true}
-    />
+    <Picture src="/src/images/firstgallery/3Through.png" alt="artwork called Through" width={1024} flatten={true}
+      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
   </div>
   <div class="column">
-    <Picture
-      src="/src/images/PlanetEarth.jpg"
-      alt="artwork called PlanetEarth"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/PiazzaN1.jpg"
-      alt="artwork called PiazzaN1"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Oceans.jpg"
-      alt="artwork called Oceans"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/NewContact.jpg"
-      alt="artwork called NewContact"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/MM.jpg"
-      alt="artwork called MM"
-      width={1024}
-      flatten={true}
-    />
-    <Picture
-      src="/src/images/Rockstar.jpg"
-      alt="artwork called Rockstar"
-      width={1024}
-      flatten={true}
-    />
+    <Picture src="/src/images/firstgallery/4Earth.png" alt="artwork called Earth" width={1024} flatten={true}
+      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+  </div>
+  <div class="column">
+    <Picture src="/src/images/firstgallery/5Accademia.png" alt="artwork called Accademia" width={1024} flatten={true}
+      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
+  </div>
+  <div class="column">
+    <Picture src="/src/images/firstgallery/6Why_.png" alt="artwork called Why" width={1024} flatten={true}
+      preload="webp" fallbackFormat="jpg" includeSourceFormat={false} />
   </div>
 </div>
 <style>
