reworked hero text

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,6 @@
 ---
 import Avatar from "./Avatar.astro";
+import NavbarItem from "./NavbarItem.astro";
 
 ---
 
@@ -61,14 +62,8 @@ import Avatar from "./Avatar.astro";
                         </ul>
                     </div>
                 </li>
-                <li>
-                    <a href="#"
-                        class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacts</a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
-                </li>
+                <NavbarItem text="Contacts" />
+                <NavbarItem text="About" />
             </ul>
         </div>
     </div>
