added full routing

--- a/src/components/NavbarItem.astro
+++ b/src/components/NavbarItem.astro
@@ -1,12 +1,13 @@
 ---
 export interface Props {
     text: string;
+    href: string;
 }
 
-const { text } = Astro.props as Props;
+const { text, href } = Astro.props as Props;
 ---
 
 <li>
-    <a href="#"
+    <a href={href}
         class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">{text}</a>
 </li>
