--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@ import NavbarItem from "./NavbarItem.astro";
 <nav
     class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
     <div class="container flex flex-wrap justify-between items-center mx-auto">
-        <a href="https://flowbite.com/" class="flex items-center">
+        <a href="/" class="flex items-center">
             <Avatar />
             <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Luca Pontrandolfo</span>
         </a>
@@ -28,7 +28,7 @@ import NavbarItem from "./NavbarItem.astro";
             <ul
                 class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                 <li>
-                    <a href="#"
+                    <a href="/"
                         class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
                         aria-current="page">Home</a>
                 </li>
@@ -46,24 +46,24 @@ import NavbarItem from "./NavbarItem.astro";
                         class="hidden z-10 w-44 font-normal bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
                         <ul class="py-1 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                             <li>
-                                <a href="#"
+                                <a href="/paintings/"
                                     class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Paintings</a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="/veniceSeries/"
                                     class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Venice
                                     Series</a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="/turinSeries/"
                                     class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Turin
                                     Series</a>
                             </li>
                         </ul>
                     </div>
                 </li>
-                <NavbarItem text="Contacts" />
-                <NavbarItem text="About" />
+                <NavbarItem text="Contacts" href="/contacts/" />
+                <NavbarItem text="About" href="/about/" />
             </ul>
         </div>
     </div>
