--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Footer from "../components/Footer.astro";
+import Navbar from "../components/Navbar.astro";
+
 export interface Props {
 	title: string;
 }
@@ -18,7 +21,14 @@ const { title } = Astro.props as Props;
 </head>
 
 <body>
-	<slot />
+	<main>
+		<Navbar />
+		<slot />
+		<Footer />
+	</main>
+	<script src="../../node_modules/flowbite/dist/flowbite.js">
+		import 'flowbite';
+	</script>
 </body>
 
 </html>
@@ -38,10 +48,6 @@ const { title } = Astro.props as Props;
 		font-size: var(--font-size-base);
 		color: var(--color-text);
 		background-color: var(--color-bg);
-	}
-
-	body {
-		margin: 0;
 	}
 
 	:global(h1) {
