added about text

--- a/src/pages/paintings.astro
+++ b/src/pages/paintings.astro
@@ -1,8 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
 ---
 
-<Layout title="Paitings">
-    Paitings
-</Layout>
+<Layout title="Paintings">Paintings</Layout>
