--- a/src/pages/turinSeries.astro
+++ b/src/pages/turinSeries.astro
@@ -1,8 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
 ---
 
-<Layout title="Turin  Series">
-    Turin Series
-</Layout>
+<Layout title="Turin Series">Turin Series</Layout>
