--- a/src/pages/veniceSeries.astro
+++ b/src/pages/veniceSeries.astro
@@ -1,8 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
 ---
 
-<Layout title="Venice Series">
-    Venice Series
-</Layout>
+<Layout title="Venice Series">Venice Series</Layout>
