--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props as Props;
 
 <body>
 	<main>
-		<Navbar />
+		<Navbar currentRoute={title} />
 		<slot />
 		<Footer />
 	</main>
