--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,9 +1,5 @@
----
-
----
-
 <h1 class="text-white">
-    <div>Luca</div>
-    <div>Pontrandolfo</div>
-    <div>Porfolio</div>
+  <div>LUCA</div>
+  <div>PONTRANDOLFO</div>
+  <div>PORFOLIO</div>
 </h1>
