--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,48 +3,50 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="About">
-  <p>
-    - Bio - - Luca Pontrandolfo lives and works in Turin (Italy) He obtained a
-    degree in secondary Art School “Accademia Albertina” in Turin. He works
-    essentially with Computer Graphic, Mixed Media on canvas, Acrylic painting,
-    Lightbox. - Luca Pontrandolfo, artista contemporaneo, vive e lavora a Torino
-    (Italia) Diplomato all’ “Accademia Albertina di Belle Arti” di Torino, oltre
-    a studi, con professionisti, in Computer Grafica e Fotografia. L.P. lavora
-    essenzialmente in Computer Grafica, Mixed Media su tela, pittura ad
-    Acrilici, Lightbox. - Ha partecipato con i propri lavori in varie Mostre
-    collettive e Premi Nazionali e internazionali tra cui: - “Badiani Art
-    Space”, London (GB) - “Lau_Notari Art Studio”, Hilversum/Amsterdam (NL) -
-    “Caboto 35”, Torino - Mostra Internazionale - “Italia Arte”, Villa
-    Gualino,Torino - “Athensart” International Art Exhibition, Athens (GR) -
-    Galleria “San Gregorio Art Gallery”,Venezia - Mostra “Unione” “Elle
-    Galleria”, Preganziol (TV) - “1° “Biennale d’Arte” Genovarte (GE) - II
-    Ed.“PremioCeleste” per la pittura figurativa, San Gimignano (SI) - 10°
-    Premio “Saturarte”,Genova - “Premio Internazionale Espoarte”, Albissola
-    Marina (SV) – “XXVI Rassegna d’Arte Internazionale “La Telaccia
-    d’oro”,Torino - Mostra “L’uomo e il mare”, Savona - “ 3° Concorso di
-    pittura, Città di Venaria Reale (TO) - “Mostra Art Studio “Galleria Abaco”,
-    Torino - “Il Quadrifoglio”, Rivoli (TO) – “Mostra di pittura Art Studio”,
-    Torino - “International Mail Project” CARISMA, Torino
-  </p>
-  <p>
-    -Introduction - The artistic research of L.P. develops according to
-    figurative themes. Nourishing himself with the sap of ’90 movements
-    -particularly Metaphysics and Pop Art- and with the methods and the
-    techniques Of image perception and of modern communication, he tends to
-    create a personal way to represent Ideas and subjects. The final goal of
-    every artist is to give emotions through is works. He is an Artist that
-    loves to experiment new techniques and to imagine different worlds in the
-    space between Surrealism and vision. A figurative technique for a content to
-    be interpreted and surely modern, which Stands among environment, ecology,
-    universe and the Man… (G. F.) - Note - La ricerca artistica di L.P. si
-    sviluppa in termini prettamente figurativi, attingendo alla linfa dei
-    movimenti del Novecento, in particolare Metafisica e Pop Art. Usando metodi
-    e tecniche della percezione dell’immagine e della comunicazione, tende a
-    creare un modo personale di rappresentazione di idee e soggetti. L’obiettivo
-    finale di ogni artista e’ dare emozioni attraverso il proprio lavoro. L.P.
-    e’ artista che ama sperimentare nuove tecniche e immaginare mondi diversi
-    nello spazio intermedio tra surrealismo e visione. Una tecnica figurativa
-    per un contenuto da interpretare e sicuramente moderno, che sta tra
-    ambiente, ecologia, universo e l’Uomo…(G.F.)
-  </p>
+  <section class="format">
+    <p>
+      - Bio - - Luca Pontrandolfo lives and works in Turin (Italy) He obtained a
+      degree in secondary Art School “Accademia Albertina” in Turin. He works
+      essentially with Computer Graphic, Mixed Media on canvas, Acrylic
+      painting, Lightbox. - Luca Pontrandolfo, artista contemporaneo, vive e
+      lavora a Torino (Italia) Diplomato all’ “Accademia Albertina di Belle
+      Arti” di Torino, oltre a studi, con professionisti, in Computer Grafica e
+      Fotografia. L.P. lavora essenzialmente in Computer Grafica, Mixed Media su
+      tela, pittura ad Acrilici, Lightbox. - Ha partecipato con i propri lavori
+      in varie Mostre collettive e Premi Nazionali e internazionali tra cui: -
+      “Badiani Art Space”, London (GB) - “Lau_Notari Art Studio”,
+      Hilversum/Amsterdam (NL) - “Caboto 35”, Torino - Mostra Internazionale -
+      “Italia Arte”, Villa Gualino,Torino - “Athensart” International Art
+      Exhibition, Athens (GR) - Galleria “San Gregorio Art Gallery”,Venezia -
+      Mostra “Unione” “Elle Galleria”, Preganziol (TV) - “1° “Biennale d’Arte”
+      Genovarte (GE) - II Ed.“PremioCeleste” per la pittura figurativa, San
+      Gimignano (SI) - 10° Premio “Saturarte”,Genova - “Premio Internazionale
+      Espoarte”, Albissola Marina (SV) – “XXVI Rassegna d’Arte Internazionale
+      “La Telaccia d’oro”,Torino - Mostra “L’uomo e il mare”, Savona - “ 3°
+      Concorso di pittura, Città di Venaria Reale (TO) - “Mostra Art Studio
+      “Galleria Abaco”, Torino - “Il Quadrifoglio”, Rivoli (TO) – “Mostra di
+      pittura Art Studio”, Torino - “International Mail Project” CARISMA, Torino
+    </p>
+    <p>
+      -Introduction - The artistic research of L.P. develops according to
+      figurative themes. Nourishing himself with the sap of ’90 movements
+      -particularly Metaphysics and Pop Art- and with the methods and the
+      techniques Of image perception and of modern communication, he tends to
+      create a personal way to represent Ideas and subjects. The final goal of
+      every artist is to give emotions through is works. He is an Artist that
+      loves to experiment new techniques and to imagine different worlds in the
+      space between Surrealism and vision. A figurative technique for a content
+      to be interpreted and surely modern, which Stands among environment,
+      ecology, universe and the Man… (G. F.) - Note - La ricerca artistica di
+      L.P. si sviluppa in termini prettamente figurativi, attingendo alla linfa
+      dei movimenti del Novecento, in particolare Metafisica e Pop Art. Usando
+      metodi e tecniche della percezione dell’immagine e della comunicazione,
+      tende a creare un modo personale di rappresentazione di idee e soggetti.
+      L’obiettivo finale di ogni artista e’ dare emozioni attraverso il proprio
+      lavoro. L.P. e’ artista che ama sperimentare nuove tecniche e immaginare
+      mondi diversi nello spazio intermedio tra surrealismo e visione. Una
+      tecnica figurativa per un contenuto da interpretare e sicuramente moderno,
+      che sta tra ambiente, ecologia, universo e l’Uomo…(G.F.)
+    </p>
+  </section>
 </Layout>
