--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Gallery from '../components/Gallery.astro';
-import Slideshow from '../components/Slideshow.astro';
-import HeroText from '../components/HeroText.astro';
+import Layout from "../layouts/Layout.astro";
+import Gallery from "../components/Gallery.astro";
+import Slideshow from "../components/Slideshow.astro";
+import HeroText from "../components/HeroText.astro";
 ---
 
 <Layout title="Homepage">
-	<Slideshow>
-		<div class="flex items-center w-screen h-screen">
-			<HeroText />
-		</div>
-	</Slideshow>
-	<Gallery />
+  <Slideshow>
+    <div class="flex items-center w-screen h-screen format text-5xl">
+      <HeroText />
+    </div>
+  </Slideshow>
+  <Gallery />
 </Layout>
