--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,5 +1,4 @@
-<h1 class="text-white">
-  <div>LUCA</div>
-  <div>PONTRANDOLFO</div>
-  <div>PORFOLIO</div>
-</h1>
+<h2 class="text-white">
+  <strong>LUCA <br /> PONTRANDOLFO</strong>
+  <div class="font-thin">PORFOLIO</div>
+</h2>
