--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,10 +15,9 @@ const { currentRoute } = Astro.props as Props;
   <div class="container flex flex-wrap justify-between items-center mx-auto">
     <a href="/" class="flex items-center">
       <Avatar />
-      <span
-        class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-        >Luca Pontrandolfo
-      </span>
+      <h1 class="self-center text-xl whitespace-nowrap dark:text-white">
+        Luca Pontrandolfo
+      </h1>
     </a>
     <div class="flex">
       <button
