--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -1,8 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
+import { Icon } from "astro-icon";
 ---
 
 <Layout title="Contacts">
-    contacts
+  <h2>Contatti</h2>
+  <p>
+    Per informazioni sulle mie opere e le prossime esibizioni, contattatemi
+    tramite i seguenti canali
+  </p>
+  <Icon name="ic:baseline-phone" />
+  <Icon name="ic:baseline-email" />
 </Layout>
