--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -1,1 +1,5 @@
-<img class="w-10 h-10 rounded-full" src="/src/images/LPportrait.png" alt="Rounded avatar">
+<img
+  class="w-10 h-10 rounded-full"
+  src="/src/images/LPportrait.png"
+  alt="Rounded avatar"
+/>
