--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
+import "@fontsource/montserrat/variable.css";
 
 export interface Props {
   title: string;
@@ -42,7 +43,7 @@ const { title } = Astro.props as Props;
   }
 
   html {
-    font-family: system-ui, sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: var(--font-size-base);
     color: var(--color-text);
     background-color: var(--color-bg);
