--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,50 +3,64 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="About">
-  <section class="format">
-    <p>
-      - Bio - - Luca Pontrandolfo lives and works in Turin (Italy) He obtained a
-      degree in secondary Art School “Accademia Albertina” in Turin. He works
-      essentially with Computer Graphic, Mixed Media on canvas, Acrylic
-      painting, Lightbox. - Luca Pontrandolfo, artista contemporaneo, vive e
-      lavora a Torino (Italia) Diplomato all’ “Accademia Albertina di Belle
-      Arti” di Torino, oltre a studi, con professionisti, in Computer Grafica e
-      Fotografia. L.P. lavora essenzialmente in Computer Grafica, Mixed Media su
-      tela, pittura ad Acrilici, Lightbox. - Ha partecipato con i propri lavori
-      in varie Mostre collettive e Premi Nazionali e internazionali tra cui: -
-      “Badiani Art Space”, London (GB) - “Lau_Notari Art Studio”,
-      Hilversum/Amsterdam (NL) - “Caboto 35”, Torino - Mostra Internazionale -
-      “Italia Arte”, Villa Gualino,Torino - “Athensart” International Art
-      Exhibition, Athens (GR) - Galleria “San Gregorio Art Gallery”,Venezia -
-      Mostra “Unione” “Elle Galleria”, Preganziol (TV) - “1° “Biennale d’Arte”
-      Genovarte (GE) - II Ed.“PremioCeleste” per la pittura figurativa, San
-      Gimignano (SI) - 10° Premio “Saturarte”,Genova - “Premio Internazionale
-      Espoarte”, Albissola Marina (SV) – “XXVI Rassegna d’Arte Internazionale
-      “La Telaccia d’oro”,Torino - Mostra “L’uomo e il mare”, Savona - “ 3°
-      Concorso di pittura, Città di Venaria Reale (TO) - “Mostra Art Studio
-      “Galleria Abaco”, Torino - “Il Quadrifoglio”, Rivoli (TO) – “Mostra di
-      pittura Art Studio”, Torino - “International Mail Project” CARISMA, Torino
-    </p>
-    <p>
-      -Introduction - The artistic research of L.P. develops according to
-      figurative themes. Nourishing himself with the sap of ’90 movements
-      -particularly Metaphysics and Pop Art- and with the methods and the
-      techniques Of image perception and of modern communication, he tends to
-      create a personal way to represent Ideas and subjects. The final goal of
-      every artist is to give emotions through is works. He is an Artist that
-      loves to experiment new techniques and to imagine different worlds in the
-      space between Surrealism and vision. A figurative technique for a content
-      to be interpreted and surely modern, which Stands among environment,
-      ecology, universe and the Man… (G. F.) - Note - La ricerca artistica di
-      L.P. si sviluppa in termini prettamente figurativi, attingendo alla linfa
-      dei movimenti del Novecento, in particolare Metafisica e Pop Art. Usando
-      metodi e tecniche della percezione dell’immagine e della comunicazione,
-      tende a creare un modo personale di rappresentazione di idee e soggetti.
-      L’obiettivo finale di ogni artista e’ dare emozioni attraverso il proprio
-      lavoro. L.P. e’ artista che ama sperimentare nuove tecniche e immaginare
-      mondi diversi nello spazio intermedio tra surrealismo e visione. Una
-      tecnica figurativa per un contenuto da interpretare e sicuramente moderno,
-      che sta tra ambiente, ecologia, universo e l’Uomo…(G.F.)
-    </p>
+  <section class="format mx-auto">
+    <div>
+      <h2>Bio</h2>
+      <p>
+        Luca Pontrandolfo, artista contemporaneo, vive e lavora a Torino
+        (Italia) Diplomato all’ “Accademia Albertina di Belle Arti” di Torino,
+        oltre a studi, con professionisti, in Computer Grafica e Fotografia.
+      </p>
+      <p>
+        L.P. lavora essenzialmente in Computer Grafica, Mixed Media su tela,
+        pittura ad Acrilici, Lightbox. Ha partecipato con i propri lavori in
+        varie Mostre collettive e Premi Nazionali e internazionali tra cui:
+      </p>
+      <ul>
+        <li>“Badiani Art Space”, London (GB)</li>
+        <li>“Lau_Notari Art Studio”, Hilversum/Amsterdam (NL)</li>
+        <li>“Caboto 35”, Torino</li>
+        <li>Mostra Internazionale “Italia Arte”, Villa Gualino, Torino</li>
+        <li>“Athensart” International Art Exhibition, Athens (GR)</li>
+        <li>Galleria “San Gregorio Art Gallery”, Venezia</li>
+        <li>Mostra “Unione” “Elle Galleria”, Preganziol (TV)</li>
+        <li>“1° “Biennale d’Arte” Genovarte (GE)</li>
+        <li>
+          II Ed.“PremioCeleste” per la pittura figurativa, San Gimignano (SI)
+        </li>
+        <li>10° Premio “Saturarte”, Genova</li>
+        <li>“Premio Internazionale Espoarte”, Albissola Marina (SV)</li>
+        <li>
+          “XXVI Rassegna d’Arte Internazionale “La Telaccia d’oro”, Torino
+        </li>
+        <li>Mostra “L’uomo e il mare”, Savona</li>
+        <li>“ 3° Concorso di pittura, Città di Venaria Reale (TO)</li>
+        <li>“Mostra Art Studio “Galleria Abaco”, Torino</li>
+        <li>“Il Quadrifoglio”, Rivoli (TO)</li>
+        <li>“Mostra di pittura Art Studio”, Torino</li>
+        <li>“International Mail Project” CARISMA, Torino</li>
+      </ul>
+    </div>
+    <hr />
+    <div>
+      <h2>Note Stilistiche</h2>
+      <p>
+        La ricerca artistica di L.P. si sviluppa in termini prettamente
+        figurativi, attingendo alla linfa dei movimenti del Novecento, in
+        particolare Metafisica e Pop Art.
+      </p>
+      <p>
+        Usando metodi e tecniche della percezione dell’immagine e della
+        comunicazione, tende a creare un modo personale di rappresentazione di
+        idee e soggetti. L’obiettivo finale di ogni artista e’ dare emozioni
+        attraverso il proprio lavoro.
+      </p>
+      <p>
+        L.P. e’ artista che ama sperimentare nuove tecniche e immaginare mondi
+        diversi nello spazio intermedio tra surrealismo e visione. Una tecnica
+        figurativa per un contenuto da interpretare e sicuramente moderno, che
+        sta tra ambiente, ecologia, universo e l’Uomo…(G.F.)
+      </p>
+    </div>
   </section>
 </Layout>
